@@ -1,3 +1,4 @@
+    ADDED: option: Panel > Buttons > Toobar buttons have icons
     ADDED: listpanel buttons: Back, Forward
     ADDED: options: Panel > General > Layout >
            Layout / Frame Color / Frame Shape / Frame Shadow
